--- a/Description
+++ b/Description
@@ -1,10 +1,14 @@
 This document describes the creation of a flexible-fuel system which contains at least one 250 bar hydrogen tank.
-Besides the 250 bar hydrogen tank -which will often be a 3 gallon (type 1) CNG tank-, a liquid fuel tank is often added. This liquid fuel can be gasoline or biofuel (butanol, ethanol, ...).
+Besides the 250 bar hydrogen tank -which will often be a 3 gallon (type 1) CNG tank-, a liquid fuel tank is often added. 
+This liquid fuel can be gasoline or biofuel (butanol, ethanol, ...).
 
 USE
-
 A flexible-fuel system which contains both a liquid fuel tank and a hydrogen fuel tank has the benefit that it can:
 * use the liquid fuel (butanol, ethanol, ...) to cover long distances with it (liquid fuels have far greater energy in them than hydrogen compressed at 250 bar has)
 * use the hydrogen tank for driving in cities (which is useful as this fuel generates no toxic exhaust gases, which could potentially harm citizens in these cities)
 
 WORK OUT
+Only gasoline engines are suitable to run on hydrogen (as these have a spark plug, whereas Diesel engines do not). 
+As such, the fuel in the other tank (liquid) also needs to be of a type that can be used in a gasoline engine (i.e. gasoline, butanol, ethanol).
+The fuel can be switched by means of a control panel that changes the air/fuel ratio (and sometimes spark plug timing) or 
+by using a combination of a spark plug and a carburator (in which both use a different fuel and of which only one can operate at a given time). 
