--- a/Description
+++ b/Description
@@ -12,8 +12,14 @@ The energy in this H2 tank is 11,35 kWh or hence 96 % of the energy in a 1 liter
 This 11,35 liter (=3 gallon) tank will bring you, at a fuel consumption of 6 liter gasoline/100 km, 16 km far.
 Calculation: (100/6) x 0,96 = 16
 
+Another benefit is that the flexible-fuel H2 system (compared to a regular H2 system) allows you to limit the use of hydrogen to a minimum
+(to just where it's needed, i.e. cities). Liquid fuels (like ethanol and butanol) can be made using carbon-neutral (or even carbon-negative) production techniques,
+whereas hydrogen can never be made in a carbon-neutral (or carbon-negative) way. So wherever liquid fuels can be used, they should be.
+
 WORK OUT
 Only gasoline engines are suitable to run on hydrogen (as these have a spark plug, whereas Diesel engines do not). 
 As such, the fuel in the other tank (liquid) also needs to be of a type that can be used in a gasoline engine (i.e. gasoline, butanol, ethanol).
-The fuel can be switched by means of a control panel that changes the air/fuel ratio (and sometimes spark plug timing) or 
-by using a combination of a spark plug and a carburator (in which both use a different fuel and of which only one can operate at a given time).
+The fuel can be switched by means of a user-operatable control panel. This control panel connects to the ECU and will change the air/fuel ratio (and sometimes spark plug timing) 
+depending on what fuel is selected on the control panel. The ECU will change the air/fuel ratio via the solenoid fuel injector (direct injection).
+
+Another method that in which to achieve the fuel switching is by using a combination of a solenoid fuel injector and a carburator (in which both use a different fuel and of which only one can operate at a given time).
