--- a/Description
+++ b/Description
@@ -31,6 +31,7 @@ This, out of safety reasons.
 
 Notes:
 The air/fuel ratio's are:
-* 9:1 for ethanol
+* 9:1 for pure ethanol (=E100)
+* 9,7:1 for E85
 * 14,7:1 for butanol/gasoline
 * 34,3:1 for hydrogen
