--- a/Description
+++ b/Description
@@ -34,4 +34,8 @@ The air/fuel ratio's are:
 * 9:1 for pure ethanol (=E100)
 * 9,7:1 for E85
 * 14,7:1 for butanol/gasoline
+* 17,2:1 for natural gas/biogas
 * 34,3:1 for hydrogen
+
+In case no hydrogen is available, natural (or bio-)gas can be used as an alternative fuel to hydrogen.
+This, as although it still generates some pollution, it will at least burn cleaner than any of the liquid fuels and will hence still be an improvement over using liquid fuels in the cities.
