--- a/Description
+++ b/Description
@@ -38,4 +38,4 @@ The air/fuel ratio's are:
 * 34,3:1 for hydrogen
 
 In case no hydrogen is available, natural (or bio-)gas can be used as an alternative fuel to hydrogen.
-This, as although it still generates some pollution, it will at least burn cleaner than any of the liquid fuels and will hence still be an improvement over using liquid fuels in the cities.
+This, as although it still generates some toxic exhaust gases, it will at least burn cleaner than any of the liquid fuels and will hence still be an improvement over using liquid fuels in the cities.
