--- a/Description
+++ b/Description
@@ -40,3 +40,5 @@ The air/fuel ratio's are:
 In case no hydrogen is available, natural (or bio-)gas can be used as an alternative fuel to hydrogen.
 This, as although it still generates some toxic exhaust gases, it will at least burn cleaner than any of the liquid fuels and will hence still be an improvement over using liquid fuels in the cities.
 As natural gas/biogas has a higher energy rating per liter (0,009 kWh/l vs 0,003 kWh/l for hydrogen), the 3 gallon tank will bring you 3 times further or hence 48 km far (at a fuel consumption of 6 liter gasoline/100 km).
+
+The cities mentioned may also lie in low or zero-emission zones, where use of hydrogen or natural or bio-gas in the car is hence essential to allow even entering the city. 
